--- a/webapp/src/main/webapp/resources/css/bootstrap.css
+++ b/webapp/src/main/webapp/resources/css/bootstrap.css
@@ -182,6 +182,9 @@ optgroup {
 table {
   border-spacing: 0;
   border-collapse: collapse;
+  margin-left:auto; 
+  margin-right:auto;
+  border: 1px solid black;
 }
 td,
 th {
@@ -1189,6 +1192,11 @@ h6,
   line-height: 1.1;
   color: inherit;
 }
+
+.tableName {
+text-align: center;
+}
+
 h1 small,
 h2 small,
 h3 small,
