--- a/webapp/src/main/webapp/resources/css/mainStyleSheet.css
+++ b/webapp/src/main/webapp/resources/css/mainStyleSheet.css
@@ -14,6 +14,9 @@ a.navbarRef {
 .navbarRef:hover {
 	font-size:18px;
 }
-#hotelTable {
+#hotelTable, #clientTable, #visitedCountriesTable, #bookingsTable {
 	border-style: none;
+}
+#mainClientContainer, #mainBookingContainer {
+	width:550px;
 }
